--- a/litellm_config.yaml
+++ b/litellm_config.yaml
@@ -1,15 +1,33 @@
 model_list:
-- model_name: gpt-3.5-turbo-instruct
+- model_name: bedrock-claude-3-5-sonnet-v2
   litellm_params:
-    model: openai/gpt-3.5-turbo-instruct
-    api_key: os.environ/OPENAI_API_KEY
-    max_tokens: 2049
-    temperature: 0.7
-- model_name: bedrock-claude-3-5-sonnet-20241022
+    model: bedrock/anthropic.claude-3-5-sonnet-20241022-v2:0
+    aws_access_key_id: os.environ/CUSTOM_AWS_ACCESS_KEY_ID
+    aws_secret_access_key: os.environ/CUSTOM_AWS_SECRET_ACCESS_KEY
+    aws_region_name: os.environ/CUSTOM_AWS_REGION_NAME
+    max_tokens: 4096
+    temperature: 0.5
+- model_name: bedrock-claude-3-haiku-v1
   litellm_params:
-    model: bedrock/anthropic.claude-3-sonnet-20241022-v2:0
+    model: bedrock/anthropic.claude-3-haiku-20240307-v1:0
+    aws_access_key_id: os.environ/CUSTOM_AWS_ACCESS_KEY_ID
+    aws_secret_access_key: os.environ/CUSTOM_AWS_SECRET_ACCESS_KEY
+    aws_region_name: os.environ/CUSTOM_AWS_REGION_NAME
+    max_tokens: 4096
+    temperature: 0.5
+- model_name: bedrock-meta-3-2-1b-v1
+  litellm_params:
+    model: bedrock/us.meta.llama3-2-1b-instruct-v1:0
     aws_access_key_id: os.environ/CUSTOM_AWS_ACCESS_KEY_ID
     aws_secret_access_key: os.environ/CUSTOM_AWS_SECRET_ACCESS_KEY
     aws_region_name: os.environ/CUSTOM_AWS_REGION_NAME
     max_tokens: 2048
-    temperature: 0.7
+    temperature: 0.5
+- model_name: bedrock-meta-3-2-3b-v1
+  litellm_params:
+    model: bedrock/us.meta.llama3-2-3b-instruct-v1:0
+    aws_access_key_id: os.environ/CUSTOM_AWS_ACCESS_KEY_ID
+    aws_secret_access_key: os.environ/CUSTOM_AWS_SECRET_ACCESS_KEY
+    aws_region_name: os.environ/CUSTOM_AWS_REGION_NAME
+    max_tokens: 2048
+    temperature: 0.5
